// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withBannerAlertState(BpkInfoBannerDismissable) should render correctly 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div>
        <section
          class="bpk-info-banner bpk-info-banner--success"
          role="alert"
        >
          <div
            class="bpk-info-banner__header"
          >
            <span
              class="bpk-info-banner__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-info-banner__success-icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5zm5.56-12.44a1.5 1.5 0 00-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 00-2.12 2.122l3 3a1.5 1.5 0 002.12 0l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="bpk-info-banner__message"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </span>
            <span
              class="bpk-info-banner__toggle"
            >
              <button
                aria-label="Dismiss"
                class="bpk-close-button bpk-info-banner__toggle-button"
                title="Dismiss"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-close-button__icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                  />
                </svg>
              </button>
            </span>
          </div>
          <div
            style="height: 0px; overflow: hidden; transition: height 200ms ease;"
          >
            <div
              style="display: none;"
            >
              <div
                class="bpk-info-banner__children-container"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`withBannerAlertState(BpkInfoBannerExpandable) should render correctly collapsed 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div>
        <section
          class="bpk-info-banner bpk-info-banner--success bpk-info-banner--style-default"
          role="alert"
        >
          <div
            class="bpk-info-banner__header bpk-info-banner__header--expandable"
            role="button"
          >
            <span
              class="bpk-info-banner__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-info-banner__success-icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5zm5.56-12.44a1.5 1.5 0 00-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 00-2.12 2.122l3 3a1.5 1.5 0 002.12 0l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="bpk-info-banner__message"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </span>
            <span
              class="bpk-info-banner__toggle"
            >
              <button
                aria-expanded="false"
                aria-label="View more"
                class="bpk-info-banner__toggle-button"
                title="View more"
                type="button"
              >
                <span
                  style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                >
                  <svg
                    aria-hidden="true"
                    class="bpk-info-banner__expand-icon"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.287 7.8a1 1 0 011.414 0l6.293 6.292L18.287 7.8a1 1 0 111.438 1.39l-.024.024-7 7a1 1 0 01-1.414 0l-7-7a1 1 0 010-1.414z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
          <div
            style="height: 0px; overflow: hidden; transition: height 200ms ease;"
          >
            <div
              style="display: none;"
            >
              <div
                class="bpk-info-banner__children-container"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`withBannerAlertState(BpkInfoBannerExpandable) should render correctly expanded 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div>
        <section
          class="bpk-info-banner bpk-info-banner--success bpk-info-banner--style-default"
          role="alert"
        >
          <div
            class="bpk-info-banner__header bpk-info-banner__header--expandable"
            role="button"
          >
            <span
              class="bpk-info-banner__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-info-banner__success-icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5zm5.56-12.44a1.5 1.5 0 00-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 00-2.12 2.122l3 3a1.5 1.5 0 002.12 0l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="bpk-info-banner__message"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </span>
            <span
              class="bpk-info-banner__toggle"
            >
              <button
                aria-expanded="true"
                aria-label="View more"
                class="bpk-info-banner__toggle-button"
                title="View more"
                type="button"
              >
                <span
                  style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
                >
                  <svg
                    aria-hidden="true"
                    class="bpk-info-banner__expand-icon bpk-info-banner__expand-icon--flipped"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.287 7.8a1 1 0 011.414 0l6.293 6.292L18.287 7.8a1 1 0 111.438 1.39l-.024.024-7 7a1 1 0 01-1.414 0l-7-7a1 1 0 010-1.414z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
          <div
            style="height: auto; overflow: visible; transition: height 200ms ease;"
          >
            <div>
              <div
                class="bpk-info-banner__children-container"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
